--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 -->
 <!DOCTYPE html>
 
-<html>
+<html land="pt_BR>
   <head>
-    
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <tittle></tittle>
