--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 -->
 <!DOCTYPE html>
 
-<html land="pt_BR>
+<html lang="pt_BR>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
